--- a/snap-table.html
+++ b/snap-table.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>snap-table</title>
+		<link rel="stylesheet" href="./styles/style.css">
 	</head>
 	<body>
 		<h1>Number of Complaints</h1>
