Shaded table headings light grey

--- a/snap-table.html
+++ b/snap-table.html
@@ -10,16 +10,18 @@
 		<div>
 			<table>
 				<tr>
-				<th>AT&T</th>
-				<th>Andrea's Apple Store</th>
-				<th>Comcast</th>
-				<th>Kephart Enterprises</th>
+				<th bgcolor="#d3d3d3">AT&T</th>
+				<th bgcolor="#d3d3d3">Andrea's Apple Store</th>
+				<th bgcolor="#d3d3d3">Comcast</th>
+				<th bgcolor="#d3d3d3">Kephart Enterprises</th>
+					<th bgcolor="#d3d3d3">Sprint</th>
 				</tr>
 				<tr>
 					<td>2,518,626</td>
 					<td>1</td>
 					<td>78,413,419</td>
 					<td>708,641</td>
+					<td>0</td>
 				</tr>
 			</table>
 		</div>
